# QuantityMeasurement_CPP

./: .gitignore  CMakeLists.txt
main/: Feet.cpp  Feet.h  Length.cpp  Length.h  QuantityMeasurement.cpp  QuantityMeasurement.h
main/enums/: UnitType.h
main/utility/: Unit.cpp  Unit.h
test/: QuantityMeasurementTest.cpp
